# hdf5-pure-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  ccc_mapping.toml  hdf5-source.json  map.toml
.github/workflows/: ci.yml
analysis/: compatibility_matrix.md  public_api_audit.md  release_checklist.md  repo_artifact_audit.md  tracehash_divergence.md  tracehash_divergence_report.md  unsupported_features.md
benches/: benchmark.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: perf_compare.rs  read_only.rs  tracehash.rs  vds.rs  write.rs
hdf5-pure-rust/: Cargo.toml  README.md
hdf5-pure-rust/derive/src/: lib.rs
hdf5-pure-rust/src/: error.rs  lib.rs
hdf5-pure-rust/src/engine/: allocator.rs  mod.rs  writer.rs
hdf5-pure-rust/src/filters/: blosc.rs  fletcher32.rs  mod.rs  nbit.rs  shuffle.rs
hdf5-pure-rust/src/format/: btree_v2.rs  global_heap.rs  local_heap.rs  superblock.rs
hdf5-pure-rust/src/format/messages/: attribute.rs  attribute_info.rs  data_layout.rs  datatype.rs  fill_value.rs  filter_pipeline.rs  link.rs  mod.rs
hdf5-pure-rust/src/hl/: attribute.rs  dataset.rs  dataset_builder.rs  group.rs  location.rs  mod.rs  mutable_file.rs  selection.rs  types.rs  writable_file.rs
hdf5-pure-rust/src/io/: mod.rs  reader.rs
hdf5-pure-rust/tests/: attr_write_test.rs  chunked_write_test.rs  compound_test.rs  dataset_test.rs  plist_test.rs  superblock_test.rs  t2_corrupt_files.rs  t3_datatypes.rs  t7_selections.rs  t9_heaps_indices.rs  typed_read_test.rs
hdf5-pure-rust/tests/data/: attrs.h5  attrs_v3.h5  bigendian.h5  compound.h5  datasets_v0.h5  datasets_v3.h5  dense_attrs.h5  dense_links.h5  enum.h5  ref_chunked.h5  ref_deflate_25.h5  simple_v0.h5  simple_v2.h5  strings.h5
hdf5-pure-rust/tests/data/hdf5_ref/: all_dtypes.h5  groups_and_links.h5  layouts_and_filters.h5  selections_test.h5
scripts/: download-real-world-fixtures.py  generate-modern-fixtures.py  regenerate-fixtures.sh  run-read-benchmark.sh  tracehash-c-corpus.sh  tracehash-ci-check.sh  tracehash-compare.sh  tracehash-rust-corpus.sh
src/: error.rs  lib.rs  tracehash_corpus.rs
src/engine/: allocator.rs  dataset_api.rs  datatype_api.rs  file_api.rs  file_space.rs  free_list.rs  free_space.rs  group_api.rs  handle.rs  map_api.rs  memory.rs  metadata_cache.rs  mod.rs  object_api.rs  object_tracker.rs  page_buffer.rs  (+13 more)
tests/: attr_write_test.rs  attribute_test.rs  chunked_write_test.rs  compact_write_test.rs  compound_test.rs  dense_test.rs  derive_test.rs  endian_test.rs  enum_test.rs  external_storage_test.rs  group_test.rs  link_test.rs  modern_chunk_index_test.rs  plist_test.rs  real_world_test.rs  resize_test.rs  robustness_test.rs  selection_test.rs  storage_allocation_test.rs  string_test.rs  t10_write_roundtrip.rs  t11_cross_platform.rs  t1_reference_files.rs  t3_datatypes.rs  t4_datasets.rs  t6_groups_links.rs  t7_selections.rs  t8_object_headers.rs  t9_heaps_indices.rs  typed_read_test.rs  vds_test.rs  write_api_test.rs  write_test.rs
(+107 files in other folders)
