[workspace]
members = [".", "derive"]

[package]
name = "hdf5-pure-rust"
version = "0.1.0"
edition = "2021"
description = "Pure Rust implementation of the HDF5 file format. No C dependencies."
license = "MIT OR Apache-2.0"
repository = "https://github.com/henriksson-lab/hdf5-pure-rs"
homepage = "https://github.com/henriksson-lab/hdf5-pure-rs"
include = ["/src/**/*", "/derive/**/*", "/benches/**/*", "/Cargo.toml", "/README.md", "/LICENSE-*"]

[dependencies]
bitflags = "2.4"
flate2 = "1.0"
crc32fast = "1.4"
parking_lot = "0.12"
ndarray = "0.15"
hdf5-pure-rust-derive = { path = "derive", optional = true }
blosc2-pure-rs = { version = "0.2", optional = true }

[features]
default = ["derive"]
derive = ["dep:hdf5-pure-rust-derive"]
blosc = ["dep:blosc2-pure-rs"]

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
tempfile = "3.9"
