[workspace]
members = [".", "derive"]

[package]
name = "hdf5-pure-rust"
version = "0.2.2"
edition = "2021"
description = "Pure Rust implementation of the HDF5 file format. No C dependencies."
license = "BSD-3-Clause"
repository = "https://github.com/henriksson-lab/hdf5-pure-rs"
homepage = "https://github.com/henriksson-lab/hdf5-pure-rs"
include = ["/src/**/*", "/derive/**/*", "/benches/**/*", "/Cargo.toml", "/README.md", "/LICENSE-*"]

[dependencies]
bitflags = "2.4"
flate2 = "1.0"
crc32fast = "1.4"
parking_lot = "0.12"
ndarray = "0.15"
hdf5-pure-rust-derive = { version = "0.2", path = "derive", optional = true }
blosc2-pure-rs = { version = "0.2", optional = true }
tracehash = { path = "tools/tracehash", optional = true }

[features]
default = ["derive"]
derive = ["dep:hdf5-pure-rust-derive"]
blosc = ["dep:blosc2-pure-rs"]
tracehash = ["dep:tracehash"]

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name = "tracehash_corpus"
path = "src/bin/tracehash_corpus.rs"
required-features = ["tracehash"]

[dev-dependencies]
tempfile = "3.9"
