[package]
name = "hdf5-pure-rust-derive"
version = "0.2.0"
edition = "2021"
description = "Derive macro for H5Type trait (hdf5-pure-rust)"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive", "extra-traits"] }
